--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "body-parser": "^1.17.2",
     "bookshelf": "^0.10.3",
     "express": "^4.15.3",
+    "file-stream-rotator": "^0.1.0",
+    "fs": "0.0.1-security",
     "knex": "^0.13.0",
     "morgan": "^1.8.2",
+    "path": "^0.12.7",
     "sqlite3": "^3.1.8"
   },
   "devDependencies": {},
