--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "bookshelf": "^0.10.3",
+    "compression": "^1.6.2",
     "express": "^4.15.3",
     "file-stream-rotator": "^0.1.0",
     "fs": "0.0.1-security",
