--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "knex": "^0.13.0",
     "morgan": "^1.8.2",
     "path": "^0.12.7",
-    "sqlite3": "^3.1.8"
+    "pg": "^6.4.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.11.0",
+    "sequelize-cli": "^2.7.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js --ignore node_modules",
     "migrate": "knex migrate:latest"
   },
   "repository": {
